# hospital-roster-mockup

./: .gitignore  AUTOMATIC_PLAN_CREATION_PLAN.md  README.md  index.css  index.html  index.jsx  main.jsx  package-lock.json  package.json  tailwind.config.js  theming-ag-grid.md  theming-ag-grid_summary.md  tsconfig.json
backend/: .env.example  .gitignore  README.md  config.py  create_tables.py  database.py  main.py  pyproject.toml  requirements.txt  schema.sql
backend/api/: routes.py  schemas.py
backend/models/: __init__.py  assignment.py  availability.py  employee.py  plan.py  rule.py  shift.py
backend/routers/: assignments.py  availabilities.py  employees.py  plans.py  rules.py  shifts.py
backend/schemas/: __init__.py  assignment.py  availability.py  employee.py  plan.py  rule.py  shift.py
backend/services/: rule_parser.py
backend/solver/: __init__.py  constraints.py  model.py  objectives.py  solution.py
backend/tests/: test_solver.py
docs/: IMPLEMENTATION_PLAN.md  REFACTORING_GUIDE.md
src/: App.jsx
src/components/: AvailabilityDropdown.jsx  AvailabilityGrid.jsx  ContextMenu.jsx  DetailsSidePanel.jsx  DragDropZone.jsx  MonthYearPicker.jsx  PlanningGrid.jsx  ShiftGrid.jsx  ValidationIndicator.jsx  ViolationsList.jsx  WarningDialog.jsx  index.js
src/config/: api.js
src/constants/: availability.js  calendar.js  colors.js  generation.js  layout.js
src/data/: availabilityTypes.js  colors.js  employees.js  index.js  initialRules.js  models.js  scheduleData.js  shifts.js
src/dialogs/: ConstraintViolationDialog.jsx  EmergencyCoverageDialog.jsx  (+8 more)
(+40 files in other folders)
